// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamButton it should render 1`] = `
<div
  aria-controls="navigation"
  aria-label="Menu"
  className="hamburger hamburger--squeeze"
  onClick={[MockFunction]}
  tabIndex="0"
>
  <span
    className="hamburger-box"
  >
    <span
      className="hamburger-inner"
    />
  </span>
</div>
`;

exports[`HamButton it should render clicked 1`] = `
<div
  aria-controls="navigation"
  aria-label="Menu"
  className="hamburger hamburger--squeeze is-active"
  onClick={[MockFunction]}
  tabIndex="0"
>
  <span
    className="hamburger-box"
  >
    <span
      className="hamburger-inner"
    />
  </span>
</div>
`;
